clang/test/BSC/Positive/Method/Struct/struct_instance_function_multi_declaration/struct_instance_function_multi_declaration.cbs
// RUN: %clang_cc1 -verify %s
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: FileCheck --input-file=%t-rw.c %s
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

struct Foo {
  int a;
};

int struct Foo::getA(struct Foo* this);
int struct Foo::getA(struct Foo* this);

int main() {
  struct Foo foo = {.a = 1};
  foo.getA();
  return 0;
}

int struct Foo::getA(struct Foo* this) {
  return this->a;
}

// CHECK: struct Foo {
// CHECK-NEXT:  int a;
// CHECK-NEXT: };
// CHECK-EMPTY:
// CHECK-NEXT: int struct_Foo_getA(struct Foo *this);
// CHECK-EMPTY:
// CHECK-NEXT: int struct_Foo_getA(struct Foo *this);
// CHECK-EMPTY:
// CHECK-NEXT: int main(void) {
// CHECK-NEXT:   struct Foo foo = {.a = 1};
// CHECK-NEXT:   struct_Foo_getA(&foo);
// CHECK-NEXT:   return 0;
// CHECK-NEXT: }
// CHECK-EMPTY:
// CHECK-NEXT: int struct_Foo_getA(struct Foo *this) {
// CHECK-NEXT:   return this->a;
// CHECK-NEXT: }

