clang/test/BSC/Negative/Method/int_star/int_star.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// expected-no-diagnostics

struct Foo{
  int a;
};

int* struct Foo::getA(struct Foo* this) {
  return &(this->a);
};

int main() {
  return 1;
};
